[project]
name = "flutter-launcher"
version = "2025.6.18.1"
description = "launcher script for flutter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["flutter_launcher"]
exclude = [
    "__pycache__",
    "*.pyc",
    "compile*.json",
    ".cache",
    "build",
    "*.syso",
    "*.exe~",
    "*.ico~",
    "*.pdb",
    "*.sqlite3",
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["flutter_launcher"]
# exclude is not needed because wheel is build from sdist in uv

# [tool.hatch.build.hooks.custom]

[project.scripts]
flutter = "flutter_launcher.flutter:main"
flutter-dev = "flutter_launcher.flutter_dev:main"
dart = "flutter_launcher.dart:main"
